--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "helmet": "^4.6.0"
+    "helmet": "^4.6.0",
+    "mongoose": "^5.4.0",
+    "socket.io": "^2.2.0"
   },
   "keywords": [
     "vercel"
@@ -19,6 +21,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "jest": "^27.0.3",
-    "supertest": "^6.1.3"
+    "supertest": "^6.1.3",
+    "vercel": "^23.1.2"
   }
 }
