--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "express vercel boilerplate",
   "main": "app.js",
   "scripts": {
-    "start": "vercel dev",
+    "start": "bin/www",
     "test": "jest -i"
   },
   "dependencies": {
